--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=api_wallet
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/wallet_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JWT Configuration
+jwt.secret=tu_clave_secreta_muy_larga_y_segura_para_firmar_tokens_jwt
+jwt.expiration=86400000
+
+# Server Configuration
+server.port=8080
+
+# Logging Configuration
+logging.level.root=INFO
