--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- H2 database for tests -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Lombok (opcional, ayuda a reducir boilerplate) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
